Cleaning the project.
